[package]
name = "crunch"
version = "0.17.0"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "Crunch is a command-line interface (CLI) to claim staking rewards (flakes) every X hours for Substrate-based chains" 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crunch dependencies
dotenv = "0.15"
envy = "0.4"
log = "0.4"
clap = "2.33"
lazy_static = "1.4"
derive_more = "0.99"
async-recursion = "1.0.5"
serde = "1.0.132"
serde_json = "1.0.68"
thiserror = "^1.0.24"
chrono = "0.4"
regex = "1.4.6"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2.2"
base64 = "0.22.0"
rand = "0.8.4"
# subxt dependencies
subxt = { version = "0.37.0", features = ["substrate-compat", "native", "unstable-reconnecting-rpc-client", "unstable-light-client"] }
subxt-signer = { version = "0.37.0", features = ["subxt"] }
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.3"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
