[workspace]
members = [
    "packages/chains/asset-hub-polkadot",
    "packages/chains/people-polkadot",
    "packages/chains/relay-chain-polkadot",
    "packages/chains/polkadot",
    "packages/chains/asset-hub-kusama",
    "packages/chains/people-kusama",
    "packages/chains/relay-chain-kusama",
    "packages/chains/kusama",
    "packages/chains/asset-hub-paseo",
    "packages/chains/people-paseo",
    "packages/chains/relay-chain-paseo",
    "packages/chains/paseo",
    "packages/chains/asset-hub-westend",
    "packages/chains/people-westend",
    "packages/chains/relay-chain-westend",
    "packages/chains/westend",
    "packages/config",
    "packages/core",
    "packages/crunch",
    "packages/error",
    "packages/matrix",
    "packages/pools",
    "packages/report",
    "packages/stats",
    "packages/support",
]

resolver = "2"

[workspace.package]
version = "0.28.1"
license = "Apache-2.0"
repository = "https://github.com/turboflakes/crunch"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "Crunch is a command-line interface (CLI) to claim staking rewards (flakes) every X hours for Substrate-based chains"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# crunch dependencies
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
dotenv = "0.15"
envy = "0.4"
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4"
clap = "2.33"
lazy_static = "1.5"
async-recursion = "1.1.1"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "2.0.11"
chrono = "0.4.40"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
base64 = "0.22.1"
rand = "0.9.0"
# subxt dependencies
subxt = { version = "0.44.2", features = [
    "native",
    "reconnecting-rpc-client",
    "unstable-light-client",
] }
subxt-signer = { version = "0.44.2", features = ["subxt"] }
# substrate dependencies
sp-core = "35.0.0"
